# tauri-template

./: AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: window-content.tsx
src/windows/: glass-window.tsx  main-window.tsx
