[package]
name = "tauri-template"
version = "0.1.0"
description = "A reusable Tauri 2 + React + TypeScript desktop app starter"
authors = ["hkandala"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# "macos-private-api" is required for transparent windows and for the
# private macOS APIs used by the liquid glass effect.
[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-log = "2"
tauri-plugin-liquid-glass = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

